--- a/StudentService/src/main/resources/application.properties
+++ b/StudentService/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=8091
 #email properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=thirupathammakoncha@gmail.com
+spring.mail.username=xxxx@gmail.com
 spring.mail.password=bbttzyuhtvraupbq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
